--- a/cardapio_ru.html
+++ b/cardapio_ru.html
@@ -23,44 +23,385 @@ tr:nth-child(even) {
 
 <h2>HTML Table</h2>
 
-<table>
-  <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
-  </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-  </tr>
-  <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-  </tr>
-  <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
-  </tr>
-  <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
-  </tr>
+ <table style="height: 509px;width: 91.091%" border="1">
+<tbody>
+<tr>
+<td style="width: 97.6032%;background-color: #0e1480;text-align: center" colspan="7"><span style="color: #ffffff">ALMOÇO</span></td>
+</tr>
+<tr>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">MENU</span></td>
+<td style="background-color: #3b96ff;width: 15.0466%;text-align: center"><span style="color: #ffffff">SEGUNDA 21/03</span></td>
+<td style="background-color: #3b96ff;width: 7.45672%;text-align: center"><span style="color: #ffffff">TERÇA FEIRA 22/03</span></td>
+<td style="background-color: #3b96ff;width: 8.38881%;text-align: center"><span style="color: #ffffff">QUARTA FEIRA 23/03</span></td>
+<td style="background-color: #3b96ff;width: 8.52197%;text-align: center"><span style="color: #ffffff">QUINTA FEIRA 24/03</span></td>
+<td style="background-color: #3b96ff;width: 7.72304%;text-align: center"><span style="color: #ffffff">SEXTA FEIRA 25/03</span></td>
+<td style="background-color: #3b96ff;width: 9.85353%;text-align: center"><span style="color: #ffffff">SÁBADO 26/03</span></td>
+</tr>
+<tr>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">SALADA</span></td>
+<td style="width: 15.0466%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Batata doce, jerimum e<br />
+beterraba cozidos</span></td>
+</tr>
+</tbody>
 </table>
-
+</td>
+<td style="width: 7.45672%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Alface, pepino e cenoura</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 8.38881%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Legumes a Juliene<br />
+(batata , cenoura e<br />
+chuchu)</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 8.52197%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Cenoura, beterraba e<br />
+repolho</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 7.72304%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Chuchu, abobrinha e<br />
+batata inglesa cozidos</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 9.85353%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Repolho roxo, cenoura<br />
+e pepino</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center" rowspan="2"><span style="color: #ffffff">PRATOS </span><span style="color: #ffffff">PRINCIPAIS</span></td>
+<td style="width: 15.0466%;text-align: center">Creme de frango</td>
+<td style="width: 7.45672%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Calabresa acebolada</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 8.38881%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Bisteca suína com<br />
+vinagreti</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 8.52197%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Isca de carne de sol<br />
+acebolada</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 7.72304%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Feijoada</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 9.85353%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Galinha guisada</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td style="width: 15.0466%;text-align: center"><span class="fontstyle0">Picadinho de carne com<br />
+batatas</span></td>
+<td style="width: 7.45672%;text-align: center"><span class="fontstyle0">Frango Assado</span></td>
+<td style="width: 8.38881%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Panqueca de carne***</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 8.52197%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Torta de frango*</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 7.72304%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Silveirinha de frango</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 9.85353%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Almôndegas de carrne<br />
+ao molho de tomate</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">ACOMPANHAMENTO</span></td>
+<td style="width: 15.0466%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Arroz<br />
+Feijão Carioca</span></td>
+</tr>
+</tbody>
+</table>
+<p>&nbsp;</td>
+<td style="width: 7.45672%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Arroz<br />
+Feijão de corda</span></td>
+</tr>
+</tbody>
+</table>
+<p>&nbsp;</td>
+<td style="width: 8.38881%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Arroz<br />
+Feijão Carioca</span></td>
+</tr>
+</tbody>
+</table>
+<p>&nbsp;</td>
+<td style="width: 8.52197%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Arroz<br />
+Feijão Carioca</span></td>
+</tr>
+</tbody>
+</table>
+<p>&nbsp;</td>
+<td style="width: 7.72304%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Arroz<br />
+Feijão preto</span></td>
+</tr>
+</tbody>
+</table>
+<p>&nbsp;</td>
+<td style="width: 9.85353%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Arroz<br />
+Feijão branco afarofado</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">VEGETARIANO</span></td>
+<td style="width: 15.0466%;text-align: center">Hambúrguer de Soja</td>
+<td style="width: 7.45672%;text-align: center">Bolinho de Macaxeira*</td>
+<td style="width: 8.38881%;text-align: center">Empadão de Legumes*</td>
+<td style="width: 8.52197%;text-align: center">Lasanha de berinjela **</td>
+<td style="width: 7.72304%;text-align: center">Croquete de Soja*</td>
+<td style="width: 9.85353%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Grão de bico refogado</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">GUARNIÇÃO</span></td>
+<td style="width: 15.0466%;text-align: center">Cuscuz com manteiga</td>
+<td style="width: 7.45672%;text-align: center">Macarrão ao molho de<br />
+tomate*</td>
+<td style="width: 8.38881%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Farofa de alho</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 8.52197%;text-align: center">Farofa de cebola</td>
+<td style="width: 7.72304%;text-align: center">Cuscuz com cheiro<br />
+verde</td>
+<td style="width: 9.85353%;text-align: center">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Macarrão ao alho e<br />
+óleo*</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">SUCO</span></td>
+<td style="width: 15.0466%;text-align: center">Acerola</td>
+<td style="width: 7.45672%;text-align: center">Abacaxi</td>
+<td style="width: 8.38881%;text-align: center">Acerola</td>
+<td style="width: 8.52197%;text-align: center">Goiaba</td>
+<td style="width: 7.72304%;text-align: center">Caju</td>
+<td style="width: 9.85353%;text-align: center">Manga</td>
+</tr>
+<tr>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">FRUTA</span></td>
+<td style="width: 15.0466%;text-align: center">Melão</td>
+<td style="width: 7.45672%;text-align: center">Mamão</td>
+<td style="width: 8.38881%;text-align: center">Laranja</td>
+<td style="width: 8.52197%;text-align: center">Banana</td>
+<td style="width: 7.72304%;text-align: center">Mamão</td>
+<td style="width: 9.85353%;text-align: center">Melancia</td>
+</tr>
+</tbody>
+</table>
+<p><strong>*Contém lactose **Contém glúten</strong></p>
+<table style="height: 466px;width: 90.9697%" border="1">
+<tbody>
+<tr style="height: 22px">
+<td style="width: 561px;background-color: #5c3d05;text-align: center;height: 22px" colspan="6"><span style="color: #ffffff">JANTAR</span></td>
+</tr>
+<tr style="height: 44px">
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 44px"><span style="color: #ffffff">MENU</span></td>
+<td style="background-color: #fa9e52;width: 123px;text-align: center;height: 44px"><span style="color: #ffffff">SEGUNDA FEIRA 21/03</span></td>
+<td style="background-color: #fa9e52;width: 94px;text-align: center;height: 44px"><span style="color: #ffffff">TERÇA  FEIRA 22/03</span></td>
+<td style="background-color: #fa9e52;width: 109px;text-align: center;height: 44px"><span style="color: #ffffff">QUARTA FEIRA 23/03</span></td>
+<td style="background-color: #fa9e52;width: 105.6px;text-align: center;height: 44px"><span style="color: #ffffff">QUINTA FEIRA 24/03</span></td>
+<td style="background-color: #fa9e52;width: 119.4px;text-align: center;height: 44px"><span style="color: #ffffff">SEXTA FEIRA 25/03</span></td>
+</tr>
+<tr style="height: 89px">
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 178px" rowspan="2"><span style="color: #ffffff">PROTEÍNA</span></p>
+<p>&nbsp;</p>
+<p><span style="color: #ffffff">SALADA</span></td>
+<td style="width: 123px;text-align: center;height: 89px">
+<table class="NormalTable">
+<tbody>
+<tr>
+<td width="200"><span class="fontstyle0">Coxa e sobrecoxa<br />
+assadas com ervas</span></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td style="width: 94px;text-align: center;height: 89px">Picadinho com milho verde e ervilhas</td>
+<td style="width: 109px;text-align: center;height: 89px">Paçoca</td>
+<td style="width: 105.6px;text-align: center;height: 89px">Isca de frango ao molho</td>
+<td style="width: 119.4px;text-align: center;height: 89px">Lasanha de frango***</td>
+</tr>
+<tr style="height: 89px">
+<td style="width: 123px;text-align: center;height: 89px">Alface, cenoura e pepino</td>
+<td style="width: 94px;text-align: center;height: 89px">Repolho, beterraba e<br />
+milho</td>
+<td style="width: 109px;text-align: center;height: 89px">Batata, cenoura e chuchu<br />
+na manteiga e coentro</td>
+<td style="width: 105.6px;text-align: center;height: 89px">Repolho, cenoura e<br />
+cebola refogados</td>
+<td style="width: 119.4px;text-align: center;height: 89px">Alface, beterraba e pepino</td>
+</tr>
+<tr style="height: 89px">
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 89px"><span style="color: #ffffff">ACOMPANHAMENTOS</span></td>
+<td style="width: 123px;text-align: center;height: 89px">Cuscuz na manteiga</td>
+<td style="width: 94px;text-align: center;height: 89px">Arroz com açafrão</td>
+<td style="width: 109px;text-align: center;height: 89px">Arroz refogado</td>
+<td style="width: 105.6px;text-align: center;height: 89px">Macarrão ao alho e óleo*</td>
+<td style="width: 119.4px;text-align: center;height: 89px">Arroz com cenoura</td>
+</tr>
+<tr style="height: 89px">
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 89px"><span style="color: #ffffff">VEGETARIANO</span></td>
+<td style="width: 123px;text-align: center;height: 89px">Ovos cozidos com molho rosé</td>
+<td style="width: 94px;text-align: center;height: 89px">Torta de legumes***</td>
+<td style="width: 109px;text-align: center;height: 89px">Legumes ao forno com<br />
+molho de tomate</td>
+<td style="width: 105.6px;text-align: center;height: 89px">Abobrinha em cubos refogada</td>
+<td style="width: 119.4px;text-align: center;height: 89px">Bolinho de Brócolis com<br />
+queijo***</td>
+</tr>
+<tr style="height: 22px">
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 22px"><span style="color: #ffffff">PÃO</span></td>
+<td style="width: 123px;text-align: center;height: 22px">Pão*/café</td>
+<td style="width: 94px;text-align: center;height: 22px">Pão*/café</td>
+<td style="width: 109px;text-align: center;height: 22px">Pão*/café</td>
+<td style="width: 105.6px;text-align: center;height: 22px">Pão*/café</td>
+<td style="width: 119.4px;text-align: center;height: 22px">Pão*/café</td>
+</tr>
+<tr style="height: 22px">
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 22px"><span style="color: #ffffff">SUCO</span></td>
+<td style="width: 123px;text-align: center;height: 22px">Acerola</td>
+<td style="width: 94px;text-align: center;height: 22px">Goiaba</td>
+<td style="width: 109px;text-align: center;height: 22px">Caju</td>
+<td style="width: 105.6px;text-align: center;height: 22px">Abacaxi</td>
+<td style="width: 119.4px;text-align: center;height: 22px">Acerola</td>
+</tr>
+</tbody>
+</table>
+<p>&nbsp;</p>
+<p><strong>*Contém glúten **Contém lactose ***Contém glúten e lactose</strong></p>
 </body>
 </html>
 
