--- a/cardapio_ru.html
+++ b/cardapio_ru.html
@@ -40,14 +40,8 @@ tr:nth-child(even) {
 <tr>
 <td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">SALADA</span></td>
 <td style="width: 15.0466%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Batata doce, jerimum e<br />
-beterraba cozidos</span></td>
-</tr>
-</tbody>
-</table>
+Batata doce, jerimum e<br />
+beterraba cozidos
 </td>
 <td style="width: 7.45672%;text-align: center">
 <table class="NormalTable">
