--- a/cardapio_ru.html
+++ b/cardapio_ru.html
@@ -28,9 +28,9 @@ tr:nth-child(even) {
 <tr>
 <td style="width: 97.6032%;background-color: #0e1480;text-align: center" colspan="7"><span style="color: #ffffff">ALMOÇO</span></td>
 </tr>
-<tr>
-<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">MENU</span></td>
-<td style="background-color: #3b96ff;width: 15.0466%;text-align: center"><span style="color: #ffffff">SEGUNDA 21/03</span></td>
+<tr style="background-color: #3b96ff;width: 40.6125%;text-align: center">
+<td>MENU</td>
+<td>SEGUNDA 21/03</td>
 <td style="background-color: #3b96ff;width: 7.45672%;text-align: center"><span style="color: #ffffff">TERÇA FEIRA 22/03</span></td>
 <td style="background-color: #3b96ff;width: 8.38881%;text-align: center"><span style="color: #ffffff">QUARTA FEIRA 23/03</span></td>
 <td style="background-color: #3b96ff;width: 8.52197%;text-align: center"><span style="color: #ffffff">QUINTA FEIRA 24/03</span></td>
@@ -40,8 +40,7 @@ tr:nth-child(even) {
 <tr>
 <td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">SALADA</span></td>
 <td style="width: 15.0466%;text-align: center">
-Batata doce, jerimum e<br />
-beterraba cozidos
+Batata doce, jerimum e beterraba cozidos
 </td>
 <td style="width: 7.45672%;text-align: center">
 <table class="NormalTable">
