--- a/cardapio_ru.html
+++ b/cardapio_ru.html
@@ -26,276 +26,157 @@ tr:nth-child(even) {
  <table style="height: 509px;width: 91.091%" border="1">
 <tbody>
 <tr>
-<td style="width: 97.6032%;background-color: #0e1480;text-align: center" colspan="7"><span style="color: #ffffff">ALMOÇO</span></td>
+<td style="width: 97.6032%;background-color: #0e1480;text-align: center" colspan="7">ALMOÇO</td>
 </tr>
-<tr style="background-color: #3b96ff;width: 40.6125%;text-align: center">
+<tr style="background-color: #3b96ff;width: 40.6125%;text-align: center;color: #ffffff">
 <td>MENU</td>
 <td>SEGUNDA 21/03</td>
-<td style="background-color: #3b96ff;width: 7.45672%;text-align: center"><span style="color: #ffffff">TERÇA FEIRA 22/03</span></td>
-<td style="background-color: #3b96ff;width: 8.38881%;text-align: center"><span style="color: #ffffff">QUARTA FEIRA 23/03</span></td>
-<td style="background-color: #3b96ff;width: 8.52197%;text-align: center"><span style="color: #ffffff">QUINTA FEIRA 24/03</span></td>
-<td style="background-color: #3b96ff;width: 7.72304%;text-align: center"><span style="color: #ffffff">SEXTA FEIRA 25/03</span></td>
-<td style="background-color: #3b96ff;width: 9.85353%;text-align: center"><span style="color: #ffffff">SÁBADO 26/03</span></td>
+<td style="text-align: center">TERÇA FEIRA 22/03</td>
+<td style="text-align: center">QUARTA FEIRA 23/03</td>
+<td style="text-align: center">QUINTA FEIRA 24/03</td>
+<td style="text-align: center">SEXTA FEIRA 25/03</td>
+<td style="text-align: center">SÁBADO 26/03</td>
 </tr>
 <tr>
-<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">SALADA</span></td>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center">SALADA</td>	
 <td style="width: 15.0466%;text-align: center">
 Batata doce, jerimum e beterraba cozidos
 </td>
 <td style="width: 7.45672%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Alface, pepino e cenoura</span></td>
-</tr>
-</tbody>
-</table>
+Alface, pepino e cenoura
 </td>
 <td style="width: 8.38881%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Legumes a Juliene<br />
-(batata , cenoura e<br />
-chuchu)</span></td>
-</tr>
-</tbody>
-</table>
+Legumes a Juliene (batata, cenoura e chuchu)
 </td>
 <td style="width: 8.52197%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Cenoura, beterraba e<br />
-repolho</span></td>
-</tr>
-</tbody>
-</table>
+Cenoura, beterraba e<br />
+repolho</td>
+
 </td>
 <td style="width: 7.72304%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Chuchu, abobrinha e<br />
-batata inglesa cozidos</span></td>
-</tr>
-</tbody>
-</table>
+Chuchu, abobrinha e<br />
+batata inglesa cozidos</td>
+
 </td>
 <td style="width: 9.85353%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Repolho roxo, cenoura<br />
-e pepino</span></td>
-</tr>
-</tbody>
-</table>
+Repolho roxo, cenoura<br />
+e pepino</td>
+
 </td>
 </tr>
 <tr>
-<td style="background-color: #3b96ff;width: 40.6125%;text-align: center" rowspan="2"><span style="color: #ffffff">PRATOS </span><span style="color: #ffffff">PRINCIPAIS</span></td>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center" rowspan="2">PRATOS PRINCIPAIS</td>
 <td style="width: 15.0466%;text-align: center">Creme de frango</td>
 <td style="width: 7.45672%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Calabresa acebolada</span></td>
-</tr>
-</tbody>
-</table>
+Calabresa acebolada</td>
+
 </td>
 <td style="width: 8.38881%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Bisteca suína com<br />
-vinagreti</span></td>
-</tr>
-</tbody>
-</table>
+Bisteca suína com<br />
+vinagreti</td>
+
 </td>
 <td style="width: 8.52197%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Isca de carne de sol<br />
-acebolada</span></td>
-</tr>
-</tbody>
-</table>
+Isca de carne de sol<br />
+acebolada</td>
+
 </td>
 <td style="width: 7.72304%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Feijoada</span></td>
-</tr>
-</tbody>
-</table>
+Feijoada</td>
+
 </td>
 <td style="width: 9.85353%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Galinha guisada</span></td>
-</tr>
-</tbody>
-</table>
+Galinha guisada</td>
+
 </td>
 </tr>
 <tr>
 <td style="width: 15.0466%;text-align: center"><span class="fontstyle0">Picadinho de carne com<br />
-batatas</span></td>
-<td style="width: 7.45672%;text-align: center"><span class="fontstyle0">Frango Assado</span></td>
+batatas</td>
+<td style="width: 7.45672%;text-align: center"><span class="fontstyle0">Frango Assado</td>
 <td style="width: 8.38881%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Panqueca de carne***</span></td>
-</tr>
-</tbody>
-</table>
+Panqueca de carne***</td>
+
 </td>
 <td style="width: 8.52197%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Torta de frango*</span></td>
-</tr>
-</tbody>
-</table>
+Torta de frango*</td>
+
 </td>
 <td style="width: 7.72304%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Silveirinha de frango</span></td>
-</tr>
-</tbody>
-</table>
+Silveirinha de frango</td>
+
 </td>
 <td style="width: 9.85353%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Almôndegas de carrne<br />
-ao molho de tomate</span></td>
-</tr>
-</tbody>
-</table>
+Almôndegas de carrne<br />
+ao molho de tomate</td>
+
 </td>
 </tr>
 <tr>
-<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">ACOMPANHAMENTO</span></td>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center">ACOMPANHAMENTO</td>
 <td style="width: 15.0466%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Arroz<br />
-Feijão Carioca</span></td>
-</tr>
-</tbody>
-</table>
+Arroz<br />
+Feijão Carioca</td>
+
 <p>&nbsp;</td>
 <td style="width: 7.45672%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Arroz<br />
-Feijão de corda</span></td>
-</tr>
-</tbody>
-</table>
+Arroz<br />
+Feijão de corda</td>
+
 <p>&nbsp;</td>
 <td style="width: 8.38881%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Arroz<br />
-Feijão Carioca</span></td>
-</tr>
-</tbody>
-</table>
+Arroz<br />
+Feijão Carioca</td>
+
 <p>&nbsp;</td>
 <td style="width: 8.52197%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Arroz<br />
-Feijão Carioca</span></td>
-</tr>
-</tbody>
-</table>
+Arroz<br />
+Feijão Carioca</td>
+
 <p>&nbsp;</td>
 <td style="width: 7.72304%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Arroz<br />
-Feijão preto</span></td>
-</tr>
-</tbody>
-</table>
+Arroz<br />
+Feijão preto</td>
+
 <p>&nbsp;</td>
 <td style="width: 9.85353%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Arroz<br />
-Feijão branco afarofado</span></td>
-</tr>
-</tbody>
-</table>
+Arroz<br />
+Feijão branco afarofado</td>
+
 </td>
 </tr>
 <tr>
-<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">VEGETARIANO</span></td>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center">VEGETARIANO</td>
 <td style="width: 15.0466%;text-align: center">Hambúrguer de Soja</td>
 <td style="width: 7.45672%;text-align: center">Bolinho de Macaxeira*</td>
 <td style="width: 8.38881%;text-align: center">Empadão de Legumes*</td>
 <td style="width: 8.52197%;text-align: center">Lasanha de berinjela **</td>
 <td style="width: 7.72304%;text-align: center">Croquete de Soja*</td>
 <td style="width: 9.85353%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Grão de bico refogado</span></td>
-</tr>
-</tbody>
-</table>
+Grão de bico refogado</td>
+
 </td>
 </tr>
 <tr>
-<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">GUARNIÇÃO</span></td>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center">GUARNIÇÃO</td>
 <td style="width: 15.0466%;text-align: center">Cuscuz com manteiga</td>
 <td style="width: 7.45672%;text-align: center">Macarrão ao molho de<br />
 tomate*</td>
 <td style="width: 8.38881%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Farofa de alho</span></td>
-</tr>
-</tbody>
-</table>
+Farofa de alho</td>
+
 </td>
 <td style="width: 8.52197%;text-align: center">Farofa de cebola</td>
 <td style="width: 7.72304%;text-align: center">Cuscuz com cheiro<br />
 verde</td>
 <td style="width: 9.85353%;text-align: center">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Macarrão ao alho e<br />
-óleo*</span></td>
-</tr>
-</tbody>
-</table>
+Macarrão ao alho e<br />
+óleo*</td>
+
 </td>
 </tr>
 <tr>
-<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">SUCO</span></td>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center">SUCO</td>
 <td style="width: 15.0466%;text-align: center">Acerola</td>
 <td style="width: 7.45672%;text-align: center">Abacaxi</td>
 <td style="width: 8.38881%;text-align: center">Acerola</td>
@@ -304,43 +185,36 @@ verde</td>
 <td style="width: 9.85353%;text-align: center">Manga</td>
 </tr>
 <tr>
-<td style="background-color: #3b96ff;width: 40.6125%;text-align: center"><span style="color: #ffffff">FRUTA</span></td>
+<td style="background-color: #3b96ff;width: 40.6125%;text-align: center">FRUTA</td>
 <td style="width: 15.0466%;text-align: center">Melão</td>
 <td style="width: 7.45672%;text-align: center">Mamão</td>
 <td style="width: 8.38881%;text-align: center">Laranja</td>
 <td style="width: 8.52197%;text-align: center">Banana</td>
 <td style="width: 7.72304%;text-align: center">Mamão</td>
 <td style="width: 9.85353%;text-align: center">Melancia</td>
-</tr>
-</tbody>
-</table>
+
 <p><strong>*Contém lactose **Contém glúten</strong></p>
 <table style="height: 466px;width: 90.9697%" border="1">
 <tbody>
 <tr style="height: 22px">
-<td style="width: 561px;background-color: #5c3d05;text-align: center;height: 22px" colspan="6"><span style="color: #ffffff">JANTAR</span></td>
+<td style="width: 561px;background-color: #5c3d05;text-align: center;height: 22px" colspan="6">JANTAR</td>
 </tr>
 <tr style="height: 44px">
-<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 44px"><span style="color: #ffffff">MENU</span></td>
-<td style="background-color: #fa9e52;width: 123px;text-align: center;height: 44px"><span style="color: #ffffff">SEGUNDA FEIRA 21/03</span></td>
-<td style="background-color: #fa9e52;width: 94px;text-align: center;height: 44px"><span style="color: #ffffff">TERÇA  FEIRA 22/03</span></td>
-<td style="background-color: #fa9e52;width: 109px;text-align: center;height: 44px"><span style="color: #ffffff">QUARTA FEIRA 23/03</span></td>
-<td style="background-color: #fa9e52;width: 105.6px;text-align: center;height: 44px"><span style="color: #ffffff">QUINTA FEIRA 24/03</span></td>
-<td style="background-color: #fa9e52;width: 119.4px;text-align: center;height: 44px"><span style="color: #ffffff">SEXTA FEIRA 25/03</span></td>
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 44px">MENU</td>
+<td style="background-color: #fa9e52;width: 123px;text-align: center;height: 44px">SEGUNDA FEIRA 21/03</td>
+<td style="background-color: #fa9e52;width: 94px;text-align: center;height: 44px">TERÇA  FEIRA 22/03</td>
+<td style="background-color: #fa9e52;width: 109px;text-align: center;height: 44px">QUARTA FEIRA 23/03</td>
+<td style="background-color: #fa9e52;width: 105.6px;text-align: center;height: 44px">QUINTA FEIRA 24/03</td>
+<td style="background-color: #fa9e52;width: 119.4px;text-align: center;height: 44px">SEXTA FEIRA 25/03</td>
 </tr>
 <tr style="height: 89px">
-<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 178px" rowspan="2"><span style="color: #ffffff">PROTEÍNA</span></p>
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 178px" rowspan="2">PROTEÍNA</p>
 <p>&nbsp;</p>
-<p><span style="color: #ffffff">SALADA</span></td>
+<p>SALADA</td>
 <td style="width: 123px;text-align: center;height: 89px">
-<table class="NormalTable">
-<tbody>
-<tr>
-<td width="200"><span class="fontstyle0">Coxa e sobrecoxa<br />
-assadas com ervas</span></td>
-</tr>
-</tbody>
-</table>
+Coxa e sobrecoxa<br />
+assadas com ervas</td>
+
 </td>
 <td style="width: 94px;text-align: center;height: 89px">Picadinho com milho verde e ervilhas</td>
 <td style="width: 109px;text-align: center;height: 89px">Paçoca</td>
@@ -358,7 +232,7 @@ cebola refogados</td>
 <td style="width: 119.4px;text-align: center;height: 89px">Alface, beterraba e pepino</td>
 </tr>
 <tr style="height: 89px">
-<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 89px"><span style="color: #ffffff">ACOMPANHAMENTOS</span></td>
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 89px">ACOMPANHAMENTOS</td>
 <td style="width: 123px;text-align: center;height: 89px">Cuscuz na manteiga</td>
 <td style="width: 94px;text-align: center;height: 89px">Arroz com açafrão</td>
 <td style="width: 109px;text-align: center;height: 89px">Arroz refogado</td>
@@ -366,7 +240,7 @@ cebola refogados</td>
 <td style="width: 119.4px;text-align: center;height: 89px">Arroz com cenoura</td>
 </tr>
 <tr style="height: 89px">
-<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 89px"><span style="color: #ffffff">VEGETARIANO</span></td>
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 89px">VEGETARIANO</td>
 <td style="width: 123px;text-align: center;height: 89px">Ovos cozidos com molho rosé</td>
 <td style="width: 94px;text-align: center;height: 89px">Torta de legumes***</td>
 <td style="width: 109px;text-align: center;height: 89px">Legumes ao forno com<br />
@@ -376,7 +250,7 @@ molho de tomate</td>
 queijo***</td>
 </tr>
 <tr style="height: 22px">
-<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 22px"><span style="color: #ffffff">PÃO</span></td>
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 22px">PÃO</td>
 <td style="width: 123px;text-align: center;height: 22px">Pão*/café</td>
 <td style="width: 94px;text-align: center;height: 22px">Pão*/café</td>
 <td style="width: 109px;text-align: center;height: 22px">Pão*/café</td>
@@ -384,15 +258,13 @@ queijo***</td>
 <td style="width: 119.4px;text-align: center;height: 22px">Pão*/café</td>
 </tr>
 <tr style="height: 22px">
-<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 22px"><span style="color: #ffffff">SUCO</span></td>
+<td style="background-color: #fa9e52;width: 10px;text-align: center;height: 22px">SUCO</td>
 <td style="width: 123px;text-align: center;height: 22px">Acerola</td>
 <td style="width: 94px;text-align: center;height: 22px">Goiaba</td>
 <td style="width: 109px;text-align: center;height: 22px">Caju</td>
 <td style="width: 105.6px;text-align: center;height: 22px">Abacaxi</td>
 <td style="width: 119.4px;text-align: center;height: 22px">Acerola</td>
-</tr>
-</tbody>
-</table>
+
 <p>&nbsp;</p>
 <p><strong>*Contém glúten **Contém lactose ***Contém glúten e lactose</strong></p>
 </body>
